force-app/main/default/objects/Body_Part_Type__c/Body_Part_Type__c.object-meta.xml
<CustomObject>
    <description>An individual section of a body part set</description>
    <label>Body Part Type</label>
    <nameField>
        <label>Body Part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Body Part Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>