force-app/main/default/objects/Body_Part_Type__c/fields/Body_Part_Set__c.field-meta.xml
<CustomField>
    <fullName>Body_Part_Set__c</fullName>
    <label>Body Part Set</label>
    <referenceTo>Body_Part_Set__c</referenceTo>
    <relationshipLabel>Body Part Types</relationshipLabel>
    <relationshipName>Body_Part_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>