force-app/main/default/objects/Body_Part_Type__c/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <label>Body Type</label>
    <referenceTo>Body_Type__c</referenceTo>
    <relationshipLabel>Body Part Types</relationshipLabel>
    <relationshipName>Body_Part_Types</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>