force-app/main/default/objects/Body_Part_Type__c/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>The order in which body parts of this type should appear within the set, from top to bottom of the drawing</description>
    <inlineHelpText>The order in which body parts of this type should appear within the set, from top to bottom of the drawing</inlineHelpText>
    <label>Sort Order</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>